force-app/main/default/objects/Relationship_Type__c/Relationship_Type__c.object-meta.xml
<CustomObject>
    <label>VR Relationship</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VR Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>