force-app/main/default/objects/Relationship_Type__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Brand Relationships to VR Users</description>
    <label>VR Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationship_Types</relationshipName>
    <type>Lookup</type>
</CustomField>